--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <title>Aiden's Homepage</title>
 
     <!-- The website stylesheet -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css?version=#" />
 
     <!-- The website JavaScript file -->
     <script src="script.js" defer></script>
